configure contact form email via Gmail and Nodemailer with environment-based TLS

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 PORT=5000
 MONGO_URI=your_mongo_uri_here
+CONTACT_EMAIL=youremail@gmail.com
+CONTACT_PASSWORD=yourPasswordGmailApp
+NODE_ENV=development
