--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-node_modules/
+#Node.js dependencies
+/node_modules/
+#Build output
+/dist/
+/build/
+/css/
+#Env files
 .env
 .env.*
 !.env.example
+#Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
