--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"global-agent": "^3.0.0",
+		"luxon": "^3.7.1",
 		"mongodb": "^6.15.0",
 		"mongoose": "^8.12.2",
 		"nodemailer": "^6.10.1",
