--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "Website for GameHaven",
 	"main": "index.js",
 	"scripts": {
-		"start": "node server.js",
-		"build": "sass sass/:public/css/ --no-source-map"
+		"build": "sass sass/:public/css/ --no-source-map",
+		"start": "npm run build && node server.js"
 	},
 	"repository": {
 		"type": "git",
