--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"luxon": "^3.7.1",
 		"mongodb": "^6.15.0",
 		"mongoose": "^8.12.2",
-		"nodemailer": "^6.10.1",
+		"resend": "^6.1.2",
 		"sass": "^1.89.2"
 	}
 }
